# sriracha-mayo

./: Cargo.toml  README.md  build.rs  justfile  release.toml  zepter.yaml
.github/scripts/: check-no-std.sh
.github/workflows/: ci.yaml
benches/: mayo.rs
src/: batch_verify.rs  bridge.c  errors.rs  externs.rs  lib.rs  parameterization.rs  public_key.rs  secret_key.rs  signature.rs
